--- a/Zatwierdz MM/Views/SkanujPage.xaml
+++ b/Zatwierdz MM/Views/SkanujPage.xaml
@@ -22,7 +22,7 @@
                    > 
             </Entry>
         </Frame>
-         
-                
+
+        <Button Text="Skanuj aparatem" Clicked="Button_Clicked" HeightRequest="80"/>
     </StackLayout>
 </ContentPage>
