--- a/Zatwierdz MM/Views/ListaZeskanowaychPage.xaml
+++ b/Zatwierdz MM/Views/ListaZeskanowaychPage.xaml
@@ -16,6 +16,9 @@
     <AbsoluteLayout>
 
 
+        <ActivityIndicator IsVisible="{Binding IsBusy}" IsRunning="{Binding IsBusy}" 
+                           AbsoluteLayout.LayoutBounds="0.5,0.5,1,.07"
+                           AbsoluteLayout.LayoutFlags="All"/>
 
         <Frame  HasShadow="true"  BorderColor="DarkGray"   
                                 CornerRadius="10" BackgroundColor="White"
