--- a/Zatwierdz MM/Views/PrzyjmijMMPage.xaml
+++ b/Zatwierdz MM/Views/PrzyjmijMMPage.xaml
@@ -38,12 +38,12 @@
                                        AbsoluteLayout.LayoutFlags="All"
                                        HorizontalTextAlignment="Start"
                                             />
-                            <!--<Label Text="{Binding Mag_Kod}" FontSize="12"  
+                            <Label Text="{Binding StanMS, StringFormat='MS: {0}'}" FontSize="16"  
                                        TextColor="Black" 
                                        AbsoluteLayout.LayoutBounds="0.05,1,.5,.3"
                                        AbsoluteLayout.LayoutFlags="All"
                                        HorizontalTextAlignment="Start"
-                                       />-->
+                                       />
                             <Label Text="{Binding Ilosc}" FontSize="20" 
                                        TextColor="Black" 
                                        AbsoluteLayout.LayoutBounds="0.25,.6,.2,.3"
