--- a/Zatwierdz MM/Views/PrzyjmijMMPage.xaml
+++ b/Zatwierdz MM/Views/PrzyjmijMMPage.xaml
@@ -46,7 +46,7 @@
                                        HorizontalTextAlignment="Start"
                                        />
                             <Label Text="{Binding Ilosc}" FontSize="20" 
-                                       TextColor="Black" 
+                                       TextColor="Black" FontAttributes="Bold"
                                        AbsoluteLayout.LayoutBounds="0.25,.6,.2,.3"
                                        AbsoluteLayout.LayoutFlags="All"
                                        HorizontalTextAlignment="End"
@@ -56,14 +56,14 @@
                                    VerticalTextAlignment="Start"
                                    AbsoluteLayout.LayoutBounds="0.65,0.1,.25,.5"
                                    AbsoluteLayout.LayoutFlags="All" 
-                                   Text="{Binding TrE_GIDLp}"
+                                   Text="{Binding TrE_GIDLp}" TextColor="LightGray"
                                    >
                                  
                             </Label>
 
 
                             <!--</StackLayout>-->
-                            <Label Text="{Binding Cena, StringFormat='{0}zł'}" TextColor="Black" FontSize="16" 
+                            <Label Text="{Binding IlKol, StringFormat='Kolory : {0}'}" TextColor="Black" FontSize="16" 
                                        AbsoluteLayout.LayoutBounds="0.7,0.8,.25,.5"
                                        AbsoluteLayout.LayoutFlags="All"
                                        HorizontalTextAlignment="Center" 
@@ -74,8 +74,8 @@
 
 
                             <Image  Source="{Binding Url}" x:Name="foto"  
-                                       AbsoluteLayout.LayoutBounds="1,0.05,.25,0.95"
-                                       AbsoluteLayout.LayoutFlags="All"
+                                       AbsoluteLayout.LayoutBounds="1,0.05,100,120"
+                                       AbsoluteLayout.LayoutFlags="PositionProportional"
                                        Aspect="AspectFill" >
                                 <!--<Image.GestureRecognizers >
                                     <TapGestureRecognizer  Command="{Binding TapCommand}" CommandParameter="{Binding Url}" />
