--- a/Zatwierdz MM/Views/PrzyjmijMMRaportRoznic.xaml
+++ b/Zatwierdz MM/Views/PrzyjmijMMRaportRoznic.xaml
@@ -12,9 +12,14 @@
     </ContentPage.ToolbarItems>
 
     <AbsoluteLayout>
+        
+        <Frame x:Name="notFound" Padding="20" HasShadow="false" IsVisible="false"
+               AbsoluteLayout.LayoutBounds="0,.4,1,.1"
+               AbsoluteLayout.LayoutFlags="All">
+            <Label Text="Raport zgodny.." TextColor="Gray" HorizontalOptions="Center" FontSize="20" />
+        </Frame>
 
-
-        <ListView x:Name="MyListView" 
+        <ListView x:Name="MyListView"  
             ItemsSource="{Binding Items}"
             ItemTapped="Handle_ItemTapped"
             CachingStrategy="RecycleElement" HasUnevenRows="True"
